2004-12-21  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* gnomevfs/Gnomevfs.metadata: Hide the auto-generated ModuleCallback
	stuff in favor of the more developer friendly custom bindings.
	* gnomevfs/Makefile.am:
	* gnomevfs/ModuleCallbackAuthentication.cs:
	* gnomevfs/ModuleCallbackFillAuthentication.cs:
	* gnomevfs/ModuleCallbackFullAuthentication.cs:
	* gnomevfs/ModuleCallbackSaveAuthentication.cs:
	* gnomevfs/ModuleCallbackStatusMessage.cs: Complete the module callback
	implementations.

2004-12-20  Mike Kestner  <mkestner@novell.com>

	* gdk/Gdk.metadata : mark a couple array params.
	* generator/Field.cs : remove the MarshalAs hack. We have to
	do something much more evil since MarshalAs can't hang.
	* generator/ImportSignature.cs : deal with out LP(U)Gen params.
	* generator/LPGen.cs : moved from SSizeTGen and generalized.
	* generator/LPUGen.cs : moved from SizeTGen and generalized.
	* generator/Makefile.am : update sources.
	* generator/MethodBody.cs : deal with out LP(U)Gen params.
	* generator/Parameters.cs : deal with out LP(U)Gen params.
	* generator/SymbolTable.cs : make all longs and size_t types LP(U)Gens.

2004-12-20  Dan Winship  <danw@novell.com>

	* generator/GUnicharGen.cs: generatable for gunichar, using
	GLib.Marshaller.CharToGUnichar and .GUnicharToChar [#70704]

	* generator/SymbolTable.cs (SymbolTable): add a GUnicharGen.

	* generator/Makefile.am (sources): add GUnicharGen.cs

	* parser/gapi2xml.pl (addPropElem): g_param_spec_unichar() has
	type "gunichar" not "unichar".

	* gtk/gtk-api.raw: Regen

	* glib/Marshaller.cs: Import CharToGUnichar's glue method by the
	right name

2004-12-20  Dan Winship  <danw@novell.com>

	* gtk/Gtk.metadata: Don't rename GtkStock to StockManager, hide
	Lookup (so we can customize it) and AddStatic (since it can't work
	right from managed code), and tweak the params of Add.

	* gtk/Stock.custom: Implement Lookup() using a special
	ConstStockItem struct so the p/invoke layer won't try to free