@@ -1,5 +1,10 @@
 2004-12-21 Jeroen Zwartepoorte <jeroen@xs4all.nl>
 
+	* en/Gnome.Vfs.xml: 
+	* en/Gnome.Vfs/*.xml: Start documenting Gnome.Vfs.
+
+2004-12-21 Jeroen Zwartepoorte <jeroen@xs4all.nl>
+
 	* en/Gnome.Vfs/*.xml : updater run for recent changes. Remove obsolete
 	ModuleCallback*[In|Out].xml files.
 
