@@ -1,5 +1,13 @@
 2004-12-21  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
 
+	* gnomevfs/Async.cs:
+	* gnomevfs/Directory.cs:
+	* gnomevfs/Sync.cs:
+	* gnomevfs/Vfs.cs: Make the constructors private so they don't show up
+	in monodoc (these classes aren't meant to be instantiated).
+
+2004-12-21  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
+
 	* gnomevfs/Gnomevfs.metadata: Hide the auto-generated ModuleCallback
 	stuff in favor of the more developer friendly custom bindings.
 	* gnomevfs/Makefile.am:
